# ian-rag-tutorial

./: .gitignore  CLAUDE.md  GUARDRAILS.md  app.py  bootstrap.py  config.py  docs_fixture.json  generate_docs.py  main.py  pyproject.toml  requirements.txt  tutorial.py
.guardrails/: hub_registry.json
api/: server.py  users.py
conversation/: __init__.py  guards.py  middleware.py  repl.py
docs/superpowers/plans/: 2026-03-30-chroma-single-index.md  2026-03-30-ddd-refactor.md  2026-03-30-department-docs.md  2026-03-30-multi-tenant-rag.md  2026-03-30-streamlit-frontend.md  2026-04-01-phoenix-tracing.md  2026-04-03-phoenix-inline-evaluations.md
docs/superpowers/specs/: 2026-03-30-ddd-refactor-design.md  2026-03-30-department-docs-design.md  2026-03-30-multi-tenant-rag-design.md  2026-03-30-single-index-chroma-design.md  2026-03-30-streamlit-frontend-design.md  2026-03-31-response-streaming-design.md  2026-04-01-phoenix-tracing-design.md  2026-04-03-phoenix-inline-evaluations-design.md  2026-04-08-adversarial-docs-testing-design.md  2026-04-14-tool-calling-design.md
evaluation/: evaluators.py
frontend/: app.py
identity/: __init__.py  models.py  permissions.py
ingestion/: __init__.py  loader.py  splitter.py
retrieval/: __init__.py  repository.py  store.py
scripts/: generate_fma.py
tests/: test_evaluators.py
tests/adversarial/: conftest.py  test_bad_metadata.py  test_formatting.py  test_hallucination.py  test_long_doc.py  test_near_dup.py  test_scanned.py
tools/: definitions.py  executor.py
