[project]
name = "ragtutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix-evals>=3.0.0",
    "arize-phoenix-otel>=0.15.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "guardrails-ai>=0.9.3",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langsmith>=0.7.22",
    "openinference-instrumentation-anthropic>=1.0.0",
    "pypdf>=6.9.2",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "reportlab>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["adversarial: adversarial document robustness tests"]
